Web admin and mobile UI changes
